Fix game spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ p {
     margin-bottom: 2rem;
 }
 
-h4 {
+h5 {
     font-family: 'Lora', serif;
     color: var(--color-text);
 }
@@ -40,7 +40,7 @@ h1 {
 hr {
     color: var(--color-text);
     max-height: 2px;
-    width: 20%;
+    width: 45%;
 }
 
 .hidden {
